tests/fixtures/valid/docs_count_assignment.lby
fn count -> i64
    let total i64 = 0
    total += 1
    total *= 42
    total
