tests/fixtures/invalid/unsupported_import.lby
import math

fn main -> i64
    1
